[package]
name = "lau-math-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM implementation of Lau math — browser/edge agent computation, spectral analysis, and conservation laws"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-math-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = { version = "0.33", features = ["libm"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
